# prod-2026-antifraud

./: .gitlab-ci.yml  README-EN.md  README.md  docker-compose.yaml
solution/apps/antifraud/: Cargo.toml
solution/apps/antifraud/application/: Cargo.toml
solution/apps/antifraud/application/src/repository/: fraud_rule.rs  fraud_rule_result.rs  mod.rs  statistics.rs  transaction.rs  user.rs  user_activity.rs
solution/apps/antifraud/application/src/service/: mod.rs
solution/apps/antifraud/application/src/service/dsl/: error.rs  mod.rs
solution/apps/antifraud/application/src/usecase/: mod.rs
solution/apps/antifraud/application/src/usecase/fraud_rule/: create.rs  disable_by_id.rs  error.rs  find_by_id.rs  find_by_name.rs  get_by_id.rs  get_by_name.rs  implementation.rs  list.rs  mod.rs  normalize_dsl_expression.rs  update_by_id.rs
solution/apps/antifraud/application/src/usecase/session/: create.rs  error.rs  get_from_token.rs  implementation.rs  mod.rs
solution/apps/antifraud/application/src/usecase/statistics/: error.rs  implementation.rs  merchants_risk.rs  mod.rs  overview.rs  rules_matches.rs  transactions_timeseries.rs  user_risk_profile.rs
solution/apps/antifraud/application/src/usecase/transaction/: bulk_create.rs  check_user_by_id.rs  create.rs  error.rs  find_by_id.rs  get_by_id.rs  get_decision_tuple.rs  implementation.rs  list.rs  mod.rs  save_decision.rs
solution/apps/antifraud/application/src/usecase/user/: authorize.rs  create.rs  deactivate_by_id.rs  error.rs  find_by_email.rs  find_by_id.rs  get_by_email.rs  get_by_id.rs  implementation.rs  list.rs  mod.rs  record_activity.rs  update_by_id.rs
solution/apps/antifraud/domain/: Cargo.toml
solution/apps/antifraud/domain/src/: constraints.rs  email.rs  lib.rs  password.rs  password_hash.rs
solution/apps/antifraud/domain/src/fraud_rule/: description.rs  dsl_expression.rs  mod.rs  name.rs  priority.rs  status.rs
solution/apps/antifraud/domain/src/fraud_rule/result/: description.rs  mod.rs  status.rs
solution/apps/antifraud/domain/src/pagination/: mod.rs  page.rs  size.rs
solution/apps/antifraud/domain/src/pagination/time_based/: from.rs  mod.rs  to.rs
solution/apps/antifraud/domain/src/session/: mod.rs  password.rs
solution/apps/antifraud/domain/src/statistics/: mod.rs
solution/apps/antifraud/domain/src/statistics/merchants/: mod.rs
solution/apps/antifraud/domain/src/statistics/overview/: mod.rs
solution/apps/antifraud/domain/src/statistics/rules/: mod.rs
solution/apps/antifraud/domain/src/statistics/transactions/: mod.rs
solution/apps/antifraud/domain/src/statistics/users/: mod.rs
solution/apps/antifraud/domain/src/transaction/: amount.rs  channel.rs  currency.rs  decision.rs  device_id.rs  filter.rs  ip_address.rs  merchant_category_code.rs  merchant_id.rs  metadata.rs  mod.rs  status.rs  timestamp.rs  user_id.rs
solution/apps/antifraud/domain/src/transaction/location/: city.rs  country.rs  latitude.rs  longitude.rs  mod.rs
solution/apps/antifraud/domain/src/transaction/pagination/: from.rs  mod.rs  to.rs
solution/apps/antifraud/domain/src/user/: age.rs  filter.rs  full_name.rs  gender.rs  is_active.rs  marital_status.rs  martial_status.rs  mod.rs  password.rs  region.rs  role.rs  status.rs
solution/apps/antifraud/infrastructure/: Cargo.toml
solution/apps/antifraud/infrastructure/persistence/: Cargo.toml
solution/apps/antifraud/infrastructure/persistence/postgres/: Cargo.toml
solution/apps/antifraud/infrastructure/persistence/postgres/.sqlx/: query-0339778a493f133888c3d48a2bc389c7180c5b6b25e3f041f21c310f9c67935d.json  query-07f03f59622f4ca4936453d58c033cda0d339027416e561742c15a45335849cf.json  query-0b3abf8f370a4100b99bfc0060d47094481127546d2bd2782da4509062543623.json  query-0d6efca1ef60473e05b385a96a85e08695a43283cd6b4a66458b460bff202e2c.json  query-1315f6cbdb7ad16dfc004b33cf58891ca57f47223a4b7487cfff857b28e69b87.json  query-290678bc813407f1ae4e31b9fad30164b43830804b258076b4752b1d29f43e07.json  query-2a642316005ccc1f96e891ae20e4557e5cf7d2293b3de3cb806d0cd635c6e46f.json  query-2dbeb25b905ac196e4bdbe4b4efa3884a38e4988d6968b5e409cfda89b30d894.json  query-340b9d5477383137c2916b72f75dc4e782dde73617f08811a0ee8473eab6202b.json  query-4137e954851668c89109717fea8170033c92cf76c1bc7ccc1061d779fcddd546.json  query-46a031b8df6d408a0a893c2e4e00611b749e42b82444a0d1df63fc3668c65440.json  query-46f16b7c244be51e6805afd522856ece2153f787055fbc8c253d322a0a11f7d8.json  query-5990411f7c7bab4479333b740dd0cf84bf303b36c1cae8d6cc3d8b3f40c7f265.json  query-6352bfcdd3102e16805f92a045ffd2bf75e23b4c8b3601b057e6161732361442.json  query-70630014fe00f08d875c9eaa4912c0426b82b888390842f4b99eb114af7a5d4c.json  query-7652084e92deba5de86e23d43d59b2addbe5ba90207a9d1c156e04b375147018.json  query-8331a3361eba0188eb637f7cae58700170c5652627f51bb461adfdd273ecbf27.json  query-859f834462838c38967e6e84815aa6a17af40b1b0d07fc8c0186084662a7ad70.json  query-86dadbda82e48eeade9af4682014bd7ec6ac326dbfc877982660a03e69cda0cb.json  (+19 more)
solution/apps/antifraud/infrastructure/persistence/redis/: Cargo.toml
solution/apps/antifraud/infrastructure/services/: Cargo.toml
solution/apps/antifraud/infrastructure/services/dsl/: Cargo.toml
solution/apps/antifraud/infrastructure/services/hasher/: Cargo.toml
solution/apps/antifraud/infrastructure/services/src/: lib.rs
solution/apps/antifraud/infrastructure/services/token/: Cargo.toml
solution/apps/antifraud/presentation/: Cargo.toml
solution/apps/antifraud/presentation/api/: Cargo.toml
solution/apps/antifraud/presentation/api/rest/: Cargo.toml
solution/apps/antifraud/presentation/api/rest/src/: lib.rs  (+1 more)
solution/apps/antifraud/presentation/src/: lib.rs
solution/apps/antifraud/src/: lib.rs
solution/apps/antifraud/src/bootstrappers/: mod.rs
solution/apps/antifraud/src/bootstrappers/initial_state/: config.rs  mod.rs
solution/apps/antifraud/src/bootstrappers/rest_api/: config.rs  mod.rs
solution/apps/antifraud/src/modules/: mod.rs
solution/apps/antifraud/src/modules/repositories/: config.rs  mod.rs
solution/apps/antifraud/src/modules/services/: config.rs  mod.rs
(+185 files in other folders)
