[package]
name = "antifraud-application"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["domain", "application"] }
domain = { path = "../domain", package = "antifraud-domain" }

chrono.workspace = true
derive-where.workspace = true
pastey.workspace = true
tracing.workspace = true
thiserror.workspace = true


[lints]
workspace = true
