[package]
name = "antifraud-application"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["domain", "application"] }
dsl.workspace = true

domain = { path = "../domain", package = "antifraud-domain" }

chrono.workspace = true
derive-where.workspace = true
entrait.workspace = true
pastey.workspace = true
tracing.workspace = true
thiserror.workspace = true

futures = "0.3"

[lints]
workspace = true
