[package]
name = "antifraud-domain"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["domain", "macros-proc"] }

chrono.workspace = true
derive_more = { workspace = true, features = ["from"] }
serde.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true

[lints]
workspace = true
