[package]
name = "antifraud-infrastructure-services"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[features]
dsl = ["dep:dsl"]

hasher = ["dep:hasher"]
hasher-argon2 = ["hasher/argon2"]

token = ["dep:token"]
token-jwt = ["token/jwt"]

[dependencies]
dsl = { path = "./dsl", package = "antifraud-infrastructure-services-dsl", optional = true }
hasher = { path = "./hasher", package = "antifraud-infrastructure-services-hasher", optional = true }
token = { path = "./token", package = "antifraud-infrastructure-services-token", optional = true }

[lints]
workspace = true
