[package]
name = "antifraud-infrastructure-persistence-redis"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["infrastructure-persistence-redis"] }
domain = { path = "../../../domain", package = "antifraud-domain" }
application = { path = "../../../application", package = "antifraud-application" }

derive-where.workspace = true
entrait.workspace = true
thiserror.workspace = true
tracing.workspace = true

redis = { version = "1.0", features = ["json", "uuid"] }


[lints]
workspace = true
