[package]
name = "antifraud-infrastructure-services-dsl"
version = "0.1.0"
authors.workspace = true
edition.workspace = true


[dependencies]
lib = { workspace = true, features = ["infrastructure-services"] }
dsl.workspace = true

domain = { path = "../../../domain", package = "antifraud-domain" }
application = { path = "../../../application", package = "antifraud-application" }

entrait.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
