[package]
name = "antifraud-presentation-api-rest"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["presentation-api-rest"] }
domain = { path = "../../../domain", package = "antifraud-domain" }
application = { path = "../../../application", package = "antifraud-application" }

axum = { workspace = true, features = ["macros"] }
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

axum-extra = { version = "0.12", features = ["typed-header"] }
serde_with = "3.16"

[lints]
workspace = true
