[package]
name = "antifraud-infrastructure-services-hasher-argon2"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true }
application = { path = "../../../../application", package = "antifraud-application" }

entrait.workspace = true
thiserror.workspace = true
tracing.workspace = true

argon2 = { version = "0.5", features = ["std"] }

[lints]
workspace = true
