[package]
name = "antifraud-infrastructure-services-token-jwt"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["infrastructure-services"] }
domain = { path = "../../../../domain", package = "antifraud-domain" }
application = { path = "../../../../application", package = "antifraud-application" }

entrait.workspace = true
model-mapper.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

[lints]
workspace = true
